Main Task finished (from 2:15 to 4:30)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android Task</string>
+    <string name="owner_name">Owner Name :</string>
+    <string name="description">Description :</string>
 </resources>
