--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Android Task</string>
     <string name="owner_name">Owner Name :</string>
     <string name="description">Description :</string>
+    <string name="go_to_owner_url">Go to Owner Url</string>
+    <string name="go_to_repo_url">Go To Repo Url</string>
 </resources>
